--- a/style.css
+++ b/style.css
@@ -1,7 +1,125 @@
 @charset "utf-8";
 
-h1 {
+/* common */
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: normal;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  /* outline: 1px solid red; */
+  margin: 0 16px;
+}
+
+/* header */
+
+header h1 {
+  font-size: 32px;
+  padding-left: 16px;
+}
+
+/* nav */
+
+nav li {
+  border-bottom: 1px solid black;
+}
+
+nav ul {
+  display: flex;
+}
+
+nav a {
+  display: block;
+  width: 128px;
+  height: auto;
+  padding:16px 0;
+  text-align: center;
+}
+
+nav li:hover {
+  background: #eee;
+  cursor: pointer;
+}
+
+/* works */
+
+.works .container {
+  width: calc(100% - 128px);
+  margin: 16px auto 0 auto;
+  max-width: 800px;
+}
+
+.works h3 {
+  margin-top: 16px;
+}
+
+.works ul li + li {
+  line-height: 1.8;
+}
+
+/* about */
+
+.about .container {
+  width: calc(100% - 128px);
+  margin: 16px auto 0 auto;
+  max-width: 800px;
+}
+
+.about p {
+  margin-top: 16px;
+}
+
+/* contact */
+
+.contact .container {
+  width: calc(100% - 128px);
+  margin: 16px auto 0 auto;
+  max-width: 800px;
+}
+
+.contact p {
+  margin-top: 16px;
+}
+
+.contact i {
   font-size: 24px;
-  padding-left: 8px;
-  border-left: 8px solid chocolate;
+}
+
+.contact i:hover {
+  opacity:.6;
+}
+
+/* footer */
+
+footer {
+  margin-top: 64px;
+}
+
+footer .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer small {
+  font-size: 16px;
 }
