--- a/style.css
+++ b/style.css
@@ -1,17 +1,50 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP');
+
+セレクタ {
+    font-family: 'Noto Sans JP', sans-serif;
+}
 
 /* common */
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 h1,
 h2,
 h3 {
   margin: 0;
+  padding: 0;
   font-weight: normal;
+}
+
+h3 {
+  margin-top: 16px;
+}
+
+.animate {
+  opacity: 0;
+  transform: translateY(8px);
+  transition: opacity .5s, transform .5s;
+}
+
+.animate.appear {
+  opacity: 1;
+  transform: none;
+}
+
+.animate.delay1 {
+  transition-delay: .1s
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  margin-top: 16px;
+  line-height: 1.8;
 }
 
 a {
@@ -25,32 +58,61 @@ ul {
   padding: 0;
 }
 
+.container li + li {
+  margin-top: 8px;
+}
+
 .container {
-  /* outline: 1px solid red; */
-  margin: 0 16px;
+  width: calc(100% - 32px * 2);
+  margin: 0 auto;
+  padding: 16px 0 ;
+  background-color: #00DBDE;
+  background-image: linear-gradient(126deg, #00DBDE 0%, #FC00FF 100%);
+  background-size: cover;
+}
+
+.animate-bg.animate {
+  opacity: 0;
+  scale: .99;
+  transition: opacity .5s, scale 1s;
+}
+
+.animate.appear {
+  scale: 1;
+  opacity: 1;
+}
+
+.text-container {
+  color: #fff;
+  width: calc(100% - 32px * 2);
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 /* header */
 
 header h1 {
   font-size: 32px;
-  padding-left: 16px;
+  padding-left: 32px;
 }
 
 /* nav */
 
-nav li {
-  border-bottom: 1px solid black;
+nav {
+  margin-left: 32px;
 }
 
 nav ul {
   display: flex;
 }
 
+nav li {
+  transition: background-color .3s;
+}
+
 nav a {
   display: block;
   width: 128px;
-  height: auto;
   padding:16px 0;
   text-align: center;
 }
@@ -60,52 +122,26 @@ nav li:hover {
   cursor: pointer;
 }
 
-/* works */
-
-.works .container {
-  width: calc(100% - 128px);
-  margin: 16px auto 0 auto;
-  max-width: 800px;
-}
-
-.works h3 {
-  margin-top: 16px;
-}
-
-.works ul li + li {
-  line-height: 1.8;
-}
-
-/* about */
-
-.about .container {
-  width: calc(100% - 128px);
-  margin: 16px auto 0 auto;
-  max-width: 800px;
-}
-
-.about p {
-  margin-top: 16px;
-}
-
-/* contact */
-
-.contact .container {
-  width: calc(100% - 128px);
-  margin: 16px auto 0 auto;
-  max-width: 800px;
-}
-
-.contact p {
-  margin-top: 16px;
-}
-
-.contact i {
+i {
   font-size: 24px;
+  transition: opacity .3s;
 }
 
-.contact i:hover {
+i:hover {
   opacity:.6;
+}
+
+.sns {
+  margin-top: 16px;
+  display: flex;
+}
+
+.sns a {
+  display: block;
+}
+
+.sns a + a {
+  margin-left: 16px;
 }
 
 /* footer */
@@ -114,12 +150,7 @@ footer {
   margin-top: 64px;
 }
 
-footer .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 footer small {
+  margin-left: 32px;
   font-size: 16px;
 }
