--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ h3 {
   font-weight: normal;
 }
 
+h1 a {
+  font-size: 24px;
+}
+
 h3 {
   margin-top: 16px;
 }
@@ -99,7 +103,8 @@ header h1 {
 /* nav */
 
 nav {
-  margin-left: 32px;
+  margin: 0 auto;
+  width: calc(100% - 32px * 2);
 }
 
 nav ul {
@@ -110,16 +115,16 @@ nav li {
   transition: background-color .3s;
 }
 
+nav li:hover {
+  background: #eee;
+  cursor: pointer;
+}
+
 nav a {
   display: block;
   width: 128px;
   padding:16px 0;
   text-align: center;
-}
-
-nav li:hover {
-  background: #eee;
-  cursor: pointer;
 }
 
 i {
@@ -153,4 +158,17 @@ footer {
 footer small {
   margin-left: 32px;
   font-size: 16px;
+}
+
+@media (max-width: 600px) {
+  nav a {
+    display: block;
+    width: 100%;
+  }
+
+  nav li {
+    display: block;
+    width: calc(100% / 3);
+    text-align: center;
+  }
 }
