--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP');
 
-セレクタ {
-    font-family: 'Noto Sans JP', sans-serif;
-}
-
 /* common */
 
 body {
@@ -70,8 +66,8 @@ ul {
   width: calc(100% - 32px * 2);
   margin: 0 auto;
   padding: 16px 0 ;
-  background-color: #00DBDE;
-  background-image: linear-gradient(126deg, #00DBDE 0%, #FC00FF 100%);
+  background-color: #74EBD5;
+  background-image: linear-gradient(284deg, #74EBD5 0%, #9FACE6 87%);
   background-size: cover;
 }
 
@@ -127,6 +123,8 @@ nav a {
   text-align: center;
 }
 
+/* contact */
+
 i {
   font-size: 24px;
   transition: opacity .3s;
@@ -162,13 +160,10 @@ footer small {
 
 @media (max-width: 600px) {
   nav a {
-    display: block;
     width: 100%;
   }
 
   nav li {
-    display: block;
     width: calc(100% / 3);
-    text-align: center;
   }
 }
